Fix alignments in star rating when used with the Twenty Twenty One theme

--- a/src/blocks/star-rating/style.scss
+++ b/src/blocks/star-rating/style.scss
@@ -8,3 +8,6 @@
 	flex-direction: row;
 	margin: 20px 0;
 }
+.ub-star-inner-container svg {
+	margin-top: initial;
+}
